functional form submit btn

--- a/Project/index.html
+++ b/Project/index.html
@@ -21,9 +21,9 @@
         <div class="form-group">
             <select name="task-type" class="select-dropdown">
                 <option value="" disable selected>Pick a task type</option>
-                <option value="Print">Sneakers</option>
-                <option value="Web">Slides</option>
-                <option value="Mobile">Boots</option>
+                <option value="Sneakers">Sneakers</option>
+                <option value="Slides">Slides</option>
+                <option value="Boots">Boots</option>
             </select>
         </div>
 
